--- a/projekt_4/projekt_4.ipynb
+++ b/projekt_4/projekt_4.ipynb
@@ -47,8 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "transform = transforms.Compose([\n",
     "     transforms.ToTensor()])\n",
     "\n",
@@ -85,9 +83,7 @@
     "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size,\n",
     "                                           shuffle=False, num_workers=16)\n",
     "\n",
-    "\n",
-    "classes = trainset.classes\n",
-    "\n"
+    "classes = trainset.classes"
    ]
   },
   {
@@ -96,7 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def get_train_images(num):\n",
     "    return torch.stack([train_dataset[i][0] for i in range(10,10+num)], dim=0)"
    ]
@@ -172,16 +167,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "input_imgs = get_train_images(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
@@ -193,19 +178,6 @@
     "        generated_imgs = model.decoder(torch.randn([n_imgs, model.latent_dim]).to(device))\n",
     "    generated_imgs = generated_imgs.cpu()\n",
     "    torch.save(generated_imgs.cpu().detach(),\"poniedzialek_iwanska_szczygielski.pt\")\n",
-    "    \n",
-    "    \n",
-    "    # grid = torchvision.utils.make_grid(generated_imgs, nrow=4, normalize=False)\n",
-    "    # grid = grid.permute(1, 2, 0)\n",
-    "    # if len(input_imgs) == 4:\n",
-    "    #     plt.figure(figsize=(10,10))\n",
-    "    # else:\n",
-    "    #     plt.figure(figsize=(15,10))\n",
-    "    # plt.title(f\"Generations\")\n",
-    "    # plt.imshow(grid)\n",
-    "    # plt.axis('off')\n",
-    "    # plt.show()\n",
-    "    \n",
     "    return generated_imgs"
    ]
   },
@@ -217,7 +189,7 @@
    "source": [
     "\n",
     "class Encoder(nn.Module):\n",
-    "    def __init__(self, input_dim, hidden_dim, latent_dim):\n",
+    "    def __init__(self, latent_dim):\n",
     "        super(Encoder, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
     "        self.norm1 = nn.BatchNorm2d(16)\n",
@@ -242,7 +214,7 @@
     "        return mean, log_var\n",
     "\n",
     "class Decoder(nn.Module):\n",
-    "    def __init__(self, latent_dim, hidden_dim, output_dim):\n",
+    "    def __init__(self, latent_dim):\n",
     "        super(Decoder, self).__init__()\n",
     "        self.fc_1 = nn.Linear(latent_dim, 128*8*8)\n",
     "        self.norm1 = nn.BatchNorm1d(128*8*8)\n",
@@ -266,11 +238,11 @@
     "        return x_hat\n",
     "\n",
     "class VAE(nn.Module):\n",
-    "    def __init__(self, x_dim, hidden_dim, latent_dim):\n",
+    "    def __init__(self, latent_dim):\n",
     "        super(VAE, self).__init__()\n",
     "        self.latent_dim = latent_dim\n",
-    "        self.encoder = Encoder(input_dim=x_dim, hidden_dim=hidden_dim, latent_dim=latent_dim)\n",
-    "        self.decoder = Decoder(latent_dim=latent_dim, hidden_dim=hidden_dim, output_dim=x_dim)\n",
+    "        self.encoder = Encoder(latent_dim=latent_dim)\n",
+    "        self.decoder = Decoder(latent_dim=latent_dim)\n",
     "        \n",
     "    def reparameterization(self, mean, var):\n",
     "        z = torch.randn_like(mean) * var + mean\n",
@@ -282,9 +254,8 @@
     "        x_hat = self.decoder(z)\n",
     "        return x_hat, mean, log_var\n",
     "\n",
-    "vae = VAE(latent_dim=32, hidden_dim=512, x_dim=3*32*32).to(device)\n",
     "\n",
-    "input_imgs = get_train_images(8)\n",
+    "vae = VAE(latent_dim=32).to(device)\n",
     "\n",
     "def vae_loss_function(x, x_hat, mean, log_var):\n",
     "    reproduction_loss = nn.functional.binary_cross_entropy(x_hat, x, reduction='sum')\n",
@@ -360,8 +331,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "num_epochs = 50\n",
     "for n in range(num_epochs):\n",
     "    losses_epoch = []\n",
@@ -386,33 +355,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([1000, 3, 32, 32])"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'generate_images' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generated_imgs \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_images\u001b[49m(vae, \u001b[38;5;241m10\u001b[39m , device)\n\u001b[1;32m      2\u001b[0m generated_imgs\u001b[38;5;241m.\u001b[39msize()\n\u001b[1;32m      3\u001b[0m grid \u001b[38;5;241m=\u001b[39m torchvision\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mmake_grid(generated_imgs, nrow\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, normalize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'generate_images' is not defined"
+     ]
     }
    ],
    "source": [
-    "generated_imgs = generate_images(vae, 1000 , device)\n",
+    "generated_imgs = generate_images(vae, 1000, device)\n",
     "generated_imgs.size()\n",
-    "# grid = torchvision.utils.make_grid(generated_imgs, nrow=10, normalize=False)\n",
-    "# grid = grid.permute(1, 2, 0)\n",
-    "# if len(input_imgs) == 4:\n",
-    "#     plt.figure(figsize=(10,10))\n",
-    "# else:\n",
-    "#     plt.figure(figsize=(15,10))\n",
-    "# plt.title(f\"Generations\")\n",
-    "# plt.imshow(grid)\n",
-    "# plt.axis('off')\n",
-    "# plt.show()"
+    "grid = torchvision.utils.make_grid(generated_imgs, nrow=10, normalize=False)\n",
+    "grid = grid.permute(1, 2, 0)\n",
+    "\n",
+    "plt.figure(figsize=(15,10))\n",
+    "plt.title(f\"Generations\")\n",
+    "plt.imshow(grid)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
