--- a/projekt_5/projekt_5.ipynb
+++ b/projekt_5/projekt_5.ipynb
@@ -125,9 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Klasa 0: 332 wystąpień\n",
+      "Klasa 1: 87 wystąpień\n",
+      "Klasa 2: 37 wystąpień\n",
+      "Klasa 3: 86 wystąpień\n",
+      "Klasa 4: 46 wystąpień\n"
+     ]
+    }
+   ],
    "source": [
     "train_classes = []\n",
     "train_data = []\n",
@@ -147,7 +159,14 @@
     "train_data_targets = torch.from_numpy(train_classes).long()\n",
     "\n",
     "test_classes = np.array(test_classes)\n",
-    "test_data_targets = torch.from_numpy(test_classes).long()\n"
+    "test_data_targets = torch.from_numpy(test_classes).long()\n",
+    "\n",
+    "classes, counts = torch.unique(test_data_targets, return_counts=True)\n",
+    "# classes, counts = torch.unique(train_data_targets, return_counts=True)\n",
+    "\n",
+    "# Wyświetlenie wyników\n",
+    "for cls, count in zip(classes, counts):\n",
+    "    print(f\"Klasa {cls}: {count} wystąpień\")\n"
    ]
   },
   {
@@ -184,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +212,7 @@
     "pad = 200\n",
     "\n",
     "\n",
-    "def pad_collate(batch, pad_value=0):\n",
+    "def pad_collate(batch, pad_value=200):\n",
     "    xx, yy = zip(*batch)\n",
     "    x_lens = [len(x) for x in xx]\n",
     "\n",
@@ -205,19 +224,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_344927/2874882105.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  xx_pad = pad_sequence([torch.tensor(x) for x in xx], batch_first=True, padding_value=pad_value)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[7.5916e-01, 3.6649e-01, 4.8691e-01,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02],\n",
+       "         [6.0209e-01, 4.7120e-02, 2.1466e-01,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02],\n",
+       "         [1.7801e-01, 8.3246e-01, 2.5131e-01,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02],\n",
+       "         ...,\n",
+       "         [5.2356e-03, 3.8743e-01, 3.8743e-01,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02],\n",
+       "         [5.9162e-01, 5.9162e-01, 5.9162e-01,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02],\n",
+       "         [0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 2.0000e+02, 2.0000e+02,\n",
+       "          2.0000e+02]]),\n",
+       " tensor([0, 3, 0, 0, 0, 1, 0, 0, 3, 4, 0, 1, 0, 0, 0, 0, 0, 0, 4, 0, 0, 1, 2, 1,\n",
+       "         0, 0, 3, 1, 2, 0, 2, 0]),\n",
+       " [208,\n",
+       "  152,\n",
+       "  83,\n",
+       "  96,\n",
+       "  78,\n",
+       "  48,\n",
+       "  52,\n",
+       "  183,\n",
+       "  228,\n",
+       "  623,\n",
+       "  1782,\n",
+       "  1401,\n",
+       "  88,\n",
+       "  774,\n",
+       "  1149,\n",
+       "  36,\n",
+       "  976,\n",
+       "  52,\n",
+       "  440,\n",
+       "  40,\n",
+       "  111,\n",
+       "  1479,\n",
+       "  326,\n",
+       "  156,\n",
+       "  129,\n",
+       "  192,\n",
+       "  210,\n",
+       "  51,\n",
+       "  117,\n",
+       "  1086,\n",
+       "  282,\n",
+       "  68])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_loader = DataLoader(train_set, batch_size=32, shuffle=True, collate_fn=lambda x: pad_collate(x))\n",
     "test_loader = DataLoader(test_set, batch_size=32, drop_last=False, collate_fn=pad_collate)\n",
     "\n",
-    "# print(train_loader.dataset.data[0][0].shape)"
+    "next(iter(train_loader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,19 +338,19 @@
     "        x = self.fc(out)\n",
     "        return x, hidden\n",
     "\n",
-    "model = LSTMRegressor(1, 5, 2, 6).to(device)\n"
+    "model = LSTMRegressor(1, 5, 2, 5).to(device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_344927/3427741911.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_344927/2874882105.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  xx_pad = pad_sequence([torch.tensor(x) for x in xx], batch_first=True, padding_value=pad_value)\n"
      ]
     },
@@ -274,17 +358,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, loss: 1.353\n",
-      "Epoch: 10, loss: 1.059\n"
+      "Epoch: 0, loss: 1.673\n",
+      "Epoch: 10, loss: 1.443\n",
+      "Epoch: 20, loss: 1.567\n",
+      "Epoch: 30, loss: 1.617\n",
+      "Epoch: 40, loss: 1.651\n",
+      "Epoch: 50, loss: 1.544\n",
+      "Epoch: 60, loss: 1.334\n",
+      "Epoch: 70, loss: 1.543\n",
+      "Epoch: 80, loss: 1.421\n",
+      "Epoch: 90, loss: 1.631\n",
+      "Epoch: 100, loss: 1.472\n"
      ]
     }
    ],
    "source": [
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "loss_fun = nn.CrossEntropyLoss()\n",
-    "\n",
+    "class_weights = torch.tensor([0.05, 0.16, 0.5, 0.17, 0.3], device=device)  # przykładowe wagi dla klas 0, 1, 2, 3, 4\n",
+    "loss_fun = nn.CrossEntropyLoss(weight=class_weights)\n",
     "# Training loop\n",
-    "for epoch in range(11):\n",
+    "for epoch in range(101):\n",
     "    for x, targets, lengths in train_loader:\n",
     "        x = x.to(device).unsqueeze(2)\n",
     "        targets = targets.to(device)\n",
@@ -303,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_344927/3427741911.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_344927/2874882105.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  xx_pad = pad_sequence([torch.tensor(x) for x in xx], batch_first=True, padding_value=pad_value)\n"
      ]
     },
@@ -318,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Loss: 1.263, Validation Accuracy: 0.552\n"
+      "Validation Loss: 1.495, Validation Accuracy: 0.320\n"
      ]
     }
    ],
@@ -338,6 +431,8 @@
     "        total_loss += loss.item()\n",
     "        pred_classes = preds.argmax(dim=1)\n",
     "        correct += (pred_classes == targets).sum().item()\n",
+    "        if not((pred_classes == 0).sum().item() and (pred_classes == 3).sum().item()):\n",
+    "            print(pred_classes)\n",
     "\n",
     "accuracy = correct / len(train_loader.dataset)\n",
     "average_loss = total_loss / len(train_loader)\n",
@@ -348,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_344927/3427741911.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_344927/2874882105.py:10: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  xx_pad = pad_sequence([torch.tensor(x) for x in xx], batch_first=True, padding_value=pad_value)\n"
      ]
     },
@@ -363,7 +458,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Loss: 1.267, Validation Accuracy: 0.565\n"
+      "tensor([4, 3, 4, 3, 4, 3, 1, 3, 4, 0, 4, 3, 2, 4, 4, 1, 3, 4, 0, 0, 0, 4, 0, 3,\n",
+      "        1, 4, 3, 3, 0, 2, 0, 1], device='cuda:0')\n",
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 4, 1, 0, 0, 0, 0, 1, 4, 0, 0, 1, 0, 4,\n",
+      "        0, 3, 4, 0, 0, 1, 0, 1], device='cuda:0')\n",
+      "tensor([1, 1, 3, 0, 3, 3, 4, 2, 3, 0, 3, 3, 1, 3, 0, 3, 2, 3, 0, 3, 2, 0, 4, 0,\n",
+      "        0, 1, 1, 3, 4, 3, 4, 2], device='cuda:0')\n",
+      "tensor([0, 0, 3, 3, 0, 1, 3, 1, 0, 1, 3, 0, 1, 3, 0, 0, 0, 4, 3, 4, 0, 2, 0, 1,\n",
+      "        0, 1, 2, 0, 0, 3, 2, 0], device='cuda:0')\n",
+      "tensor([3, 3, 4, 4, 4, 0, 3, 0, 4, 2, 3, 0, 3, 0, 0, 1, 0, 3, 4, 3, 0, 3, 4, 3,\n",
+      "        4, 3, 1, 3, 4, 4, 3, 1], device='cuda:0')\n",
+      "tensor([3, 4, 1, 3, 2, 0, 3, 0, 0, 1, 1, 3, 4, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 2,\n",
+      "        3, 0, 0, 0, 0, 3, 3, 1], device='cuda:0')\n",
+      "tensor([3, 3, 2, 3, 0, 4, 4, 0, 4, 4, 3, 1, 4, 2, 4, 4, 4, 4, 0, 0, 3, 2, 4, 4,\n",
+      "        0, 4, 4, 3, 0, 4, 4, 3], device='cuda:0')\n",
+      "tensor([3, 1, 2, 3, 1, 3, 0, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+      "        0, 4, 1, 4, 1, 0, 3, 0], device='cuda:0')\n",
+      "tensor([3, 4, 2, 3, 1, 0, 3, 3, 3, 4, 4, 3, 4, 4, 1, 4, 4, 0, 3, 4, 0, 2, 0, 3,\n",
+      "        0, 3, 3, 0, 4, 4, 3, 3], device='cuda:0')\n",
+      "tensor([0, 0, 1, 0, 1, 0, 3, 4, 4, 0, 0, 3, 0, 3, 1, 0, 0, 0, 3, 0, 1, 1, 0, 3,\n",
+      "        0, 3, 0, 1, 1, 1, 1, 0], device='cuda:0')\n",
+      "tensor([4, 3, 0, 4, 0, 4, 4, 0, 4, 3, 4, 0, 4, 1, 3, 0, 4, 3, 4, 4, 4, 3, 3, 4,\n",
+      "        0, 4, 3, 4, 0, 4, 0, 0], device='cuda:0')\n",
+      "tensor([0, 3, 0, 0, 3, 0, 0, 0, 4, 3, 0, 0, 1, 3, 2, 1, 0, 0, 4, 2, 0, 0, 3, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 1], device='cuda:0')\n",
+      "tensor([4, 4, 4, 4, 3, 4, 4, 4, 4, 1, 3, 4, 3, 4, 3, 4, 0, 2, 2, 4, 4, 4, 4, 3,\n",
+      "        1, 4, 4, 4, 4, 4, 4, 3], device='cuda:0')\n",
+      "tensor([0, 0, 0, 4, 0, 0, 3, 0, 0, 0, 0, 0, 4, 0, 1, 1, 0, 0, 1, 0, 4, 0, 0, 3,\n",
+      "        0, 0, 1, 0, 0, 1, 0, 0], device='cuda:0')\n",
+      "tensor([3, 3, 3, 4, 0, 3, 3, 4, 4, 4, 3, 4, 4, 4, 3, 4, 4, 1, 2, 4, 4, 0, 3, 3,\n",
+      "        3, 4, 1, 3, 3, 4, 4, 3], device='cuda:0')\n",
+      "tensor([3, 3, 0, 0, 0, 4, 3, 0, 1, 0, 4, 4, 0, 2, 4, 1, 2, 0, 1, 4, 2, 3, 3, 0,\n",
+      "        2, 0, 1, 3, 3, 0, 0, 2], device='cuda:0')\n",
+      "tensor([4, 4, 3, 3, 4, 4, 4, 4, 4, 4, 2, 4, 4, 3, 3, 3, 4, 3, 3, 0, 3, 4, 4, 3,\n",
+      "        3, 4, 0, 4, 2, 3, 4, 0], device='cuda:0')\n",
+      "tensor([0, 0, 0, 0, 0, 0, 4, 0, 4, 0, 1, 0, 2, 0, 3, 0, 0, 0, 0, 0, 3, 0, 1, 3,\n",
+      "        0, 4, 1, 0, 0, 0, 3, 0], device='cuda:0')\n",
+      "tensor([0, 0, 0, 0, 4, 0, 0, 0, 4, 0, 2, 3, 3, 4, 1, 0, 3, 2, 4, 2, 4, 3, 4, 3,\n",
+      "        2, 3, 4, 3, 4, 2, 4, 4], device='cuda:0')\n",
+      "tensor([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 3, 2, 0, 0, 1, 2, 0, 3,\n",
+      "        1, 3, 0, 4, 0, 3, 0, 0], device='cuda:0')\n",
+      "tensor([4, 0, 0, 4, 1, 1, 3, 4, 3, 3, 2, 4, 4, 3, 4, 0, 3, 3, 4, 4, 4, 3, 4, 1,\n",
+      "        0, 4, 3, 4, 4, 0, 4, 0], device='cuda:0')\n",
+      "tensor([1, 4, 1, 1, 1, 3, 0, 0, 4, 0, 0, 0, 3, 3, 0, 0, 3, 3, 0, 0, 0, 0, 0, 0,\n",
+      "        1, 0, 3, 0, 0, 0, 1, 0], device='cuda:0')\n",
+      "tensor([4, 4, 4, 1, 4, 0, 0, 0, 0, 0, 4, 2, 3, 4, 0, 0, 3, 1, 4, 3, 1, 4, 0, 0,\n",
+      "        4, 3, 4, 4, 4, 4, 4, 3], device='cuda:0')\n",
+      "tensor([0, 0, 3, 0, 4, 0, 0, 0, 0, 1, 0, 0, 0, 4, 4, 1, 3, 0, 0, 3, 0, 1, 0, 0,\n",
+      "        1, 4, 0, 2, 0, 0, 2, 0], device='cuda:0')\n",
+      "tensor([4, 4, 4, 3, 3, 4, 4, 3, 3, 2, 0, 3, 0, 4, 3, 3, 4, 3, 4, 0, 4, 0, 1, 4,\n",
+      "        4, 3, 4, 4, 4, 4, 4, 4], device='cuda:0')\n",
+      "tensor([2, 0, 0, 3, 4, 3, 0, 0, 2, 0, 3, 4, 0, 0, 2, 2, 0, 3, 0, 1, 2, 3, 0, 0,\n",
+      "        0, 2, 0, 0, 1, 0, 0, 0], device='cuda:0')\n",
+      "tensor([4, 0, 1, 4, 4, 4, 1, 0, 4, 2, 3, 3, 0, 4, 1, 3, 4, 4, 0, 4, 3, 4, 4, 3,\n",
+      "        3, 4, 4, 0, 4, 4, 4, 2], device='cuda:0')\n",
+      "tensor([0, 0, 2, 0, 0, 2, 0, 0, 0, 2, 1, 3, 0, 0, 4, 3, 3, 0, 0, 0, 4, 0, 0, 1,\n",
+      "        3, 1, 4, 0, 0, 4, 0, 0], device='cuda:0')\n",
+      "tensor([3, 4, 0, 1, 0, 3, 0, 3, 0, 3, 0, 0, 0, 0, 3, 4, 4, 0, 1, 3, 4, 4, 3, 2,\n",
+      "        0, 4, 3, 4, 4, 0, 3, 4], device='cuda:0')\n",
+      "tensor([1, 0, 0, 0, 0, 4, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 4, 3, 2, 0, 0, 2, 1,\n",
+      "        0, 0, 3, 0, 3, 0, 3, 0], device='cuda:0')\n",
+      "tensor([4, 0, 4, 3, 0, 0, 0, 3, 3, 3, 4, 3, 3, 0, 4, 1, 0, 3, 4, 3, 4, 3, 4, 2,\n",
+      "        3, 4, 4, 0, 4, 4, 4, 4], device='cuda:0')\n",
+      "tensor([4, 0, 0, 1, 1, 1, 0, 3, 4, 0, 0, 0, 3, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1,\n",
+      "        1, 0, 0, 0, 0, 3, 0, 0], device='cuda:0')\n",
+      "tensor([4, 0, 4, 1, 4, 3, 3, 3, 2, 3, 1, 3, 3, 3, 4, 4, 0, 0, 0, 3, 4, 0, 0, 4,\n",
+      "        3, 4, 0, 1, 4, 4, 3, 0], device='cuda:0')\n",
+      "tensor([0, 0, 4, 0, 1, 3, 3, 0, 3, 2, 0, 3, 0, 0, 0, 0, 2, 2, 3, 3, 0, 0, 0, 0,\n",
+      "        3, 0, 0, 1, 0, 0, 3, 0], device='cuda:0')\n",
+      "tensor([4, 0, 0, 3, 0, 4, 4, 2, 0, 3, 4, 4, 4, 3, 3, 0, 0, 4, 0, 4, 3, 4, 4, 3,\n",
+      "        4, 3, 2, 3, 4, 4, 4, 0], device='cuda:0')\n",
+      "tensor([0, 0, 3, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0, 3, 2, 0, 0, 0, 0, 0, 1, 0, 0, 3,\n",
+      "        3, 4, 1, 1, 0, 0, 0, 3], device='cuda:0')\n",
+      "tensor([4, 4, 4, 2, 4, 2, 0, 4, 3, 4, 4, 3], device='cuda:0')\n",
+      "tensor([0, 0, 2, 0, 0, 2, 0, 0, 1, 4, 0, 1], device='cuda:0')\n",
+      "Validation Loss: 1.537, Validation Accuracy: 0.281\n"
      ]
     }
    ],
@@ -383,12 +552,41 @@
     "        total_loss += loss.item()\n",
     "        pred_classes = preds.argmax(dim=1)\n",
     "        correct += (pred_classes == targets).sum().item()\n",
+    "        print(pred_classes)\n",
+    "        print(targets)\n",
+    "\n",
     "\n",
     "accuracy = correct / len(test_loader.dataset)\n",
     "average_loss = total_loss / len(test_loader)\n",
     "\n",
     "\n",
     "print(f'Validation Loss: {average_loss:.3f}, Validation Accuracy: {accuracy:.3f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0402, 0.1535, 0.3608, 0.1552, 0.2902], device='cuda:0')"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts = torch.tensor([332, 87, 37, 86, 46], dtype=torch.float)\n",
+    "\n",
+    "# Obliczanie wag\n",
+    "weights = 1.0 / counts\n",
+    "weights = weights / weights.sum()\n",
+    "weights = weights.to(device)\n",
+    "weights"
    ]
   }
  ],
